# sensor-payload-2024

./: Cargo.toml  README.md  memory.x
receiving/: Cargo.toml  RECEIVER.md
receiving/src/: main.rs
sending/: Cargo.toml
sending/.cargo/: config.toml
sending/src/: main.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs
src/: main.rs
