[package]
name = "sensor-payload"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embassy-usb-logger = "0.1.0"
log = "0.4.20"

# BNO055 Stuff
bno055 = "0.3.4"
