[package]
name = "sensor-sending"
authors.workspace = true
version = "0.2.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.0", features = ["defmt"] }
embassy-usb-logger = "0.1.0"
embassy-sync = "0.5.0"
embassy-embedded-hal = "0.1.0"
static_cell = "2.0.0"
portable-atomic = { version = "1.6.0", features = ["unsafe-assume-single-core"] }

# Data and packet handling
shared-types = { path = "../shared_types/" }

# Error, data, and print handling
defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
log = "0.4.20"

# ARM Cortex M0 support
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

# LoRa and sensors
sx127x_lora = "0.3.1"
mma8x5x = { path = "../../mma8x5x-rs" }
bmp388 = { git = "https://github.com/ibutra/bmp388.git", features=["asynch"] }
nmea0183 = "0.4.0"
