[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.6"
nmea0183 = "0.4.0"
packed_struct = { version = "0.10.1", default-features = false }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] }
